--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
       docker build -t html-server-image:latest .
    - name: Docker Login
      run: |
-      echo ${{ secrets.ACCESSSECRET }} | docker login ghcr.io -u ${{ secrets.REGISTRY_USR }} --password-stdin
+      echo ${{ secrets.ACCESSSECRET }} | docker login ghcr.io -u Saroj-Nayak --password-stdin
    - name: Push Docker Image
      run: |
       docker push ghcr.io/Saroj-Nayak/html-server-image:latest       
