--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,16 +3,20 @@ name: Build and Push to GH Container Registry
 on: push
 
 jobs:
-         build:
-          runs-on: ubuntu-latest
-          steps:
-           - uses: actions/checkout@v1
-           - name: Build Docker Image
-             run: |
-              docker build -t ghcr.io/saroj-nayak/html-server-image:latest .
-           - name: Docker Login
-             run: |
-              echo ${{ secrets.ACCESSSECRET }} | docker login ghcr.io -u "Saroj-Nayak" --password-stdin
-           - name: Push Docker Image
-             run: |
-              docker push ghcr.io/saroj-nayak/html-server-image:latest   
+ build:
+ runs-on: ubuntu-latest
+ steps:
+  - uses: actions/checkout@v1
+  - name: Build Docker Image
+    run: |
+     docker build -t ghcr.io/saroj-nayak/html-server-image:latest .
+  - name: Login to GHCR 
+   - uses: docker/login-action@v1  
+     with: 
+     registry: ghcr.io 
+     username: ${{ secrets.GHCR_USERNAME }} 
+     password: ${{ secrets.GHCR_TOKEN }}
+           
+  - name: Push Docker Image
+    run: |
+     docker push ghcr.io/saroj-nayak/html-server-image:latest   
