--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,12 +10,9 @@ jobs:
   - name: Build Docker Image
     run: |
      docker build -t ghcr.io/saroj-nayak/html-server-image:latest .
-  - name: Login to GHCR 
-   - uses: docker/login-action@v2  
-     with: 
-     registry: ghcr.io 
-     username: ${{ secrets.GHCR_USERNAME }} 
-     password: ${{ secrets.GHCR_TOKEN }}
+  - name: Docker Login
+    run: |
+    echo ${{ secrets.ACCESSSECRET }} | docker login ghcr.io -u "Saroj-Nayak" --password-stdin
            
   - name: Push Docker Image
     run: |
