--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,12 +10,13 @@ jobs:
   - uses: actions/checkout@v1
   - name: Build Docker Image
     run: |
-     docker build -t ghcr.io/saroj-nayak/html-server-image:latest .
+    docker build -t ghcr.io/saroj-nayak/html-server-image:latest .
+    
   - name: Docker Login
     run: |
-     echo ${{ secrets.ACCESSSECRET }} | docker login ghcr.io -u "Saroj-Nayak" --password-stdin
-           
+    docker login ghcr.io -u $ghcr_user -p $CR_PAT
+     
   - name: Push Docker Image
     run: |
-     docker push ghcr.io/saroj-nayak/html-server-image:latest   
+    docker push ghcr.io/saroj-nayak/html-server-image:latest   
           
